--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.11",
     "lucide-react": "^0.562.0",
+    "prismjs": "^1.30.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-resizable-panels": "^4.4.0",
     "react-router-dom": "^7.12.0",
+    "react-simple-code-editor": "^0.14.1",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0"
   },
