feat: Add working logout functionality and improve project setup
Features:
- Implement working logout/sign out buttons in StudentLayout and TeacherLayout
- Connect logout buttons to AuthContext logout function
- Display actual user names and initials in profile dropdowns
- Add logout functionality to both sidebar and dropdown menu

Improvements:
- Fix API error handling for Django REST Framework validation errors
- Add debug logging for registration and API errors
- Update API endpoints configuration (register, me, login)
- Populate database with test data (316 users, 9 assignments, 2019 submissions)

Database:
- Add database setup and backup scripts
- Fix database encoding issues in db_dump.json
- Populate assignments, submissions, and grades for testing

Documentation:
- Add PROJECT_WORKFLOW.md with complete system architecture
- Add SETUP.md for new machine setup instructions
- Add QUICK_START.md for quick reference
- Add LOGOUT_IMPLEMENTATION.md with logout feature details
- Add REGISTRATION_DEBUG.md for debugging registration issues
- Add FIXES_APPLIED.md summarizing all fixes
- Update README.md with project overview

Scripts:
- Add setup_database.py for automated database setup
- Add backup_database.py for database backups
- Add populate_test_data.py for generating test data
- Add fix_and_load_dump.py for fixing JSON encoding issues

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,10 @@ dist
 *.sw?
 
 public/data
+
+# Database temporary files
+backend/db_dump_fixed.json
+backend/db_dump_clean.json
+backend/db_dump_final.json
+backend/*.backup
+backend/db.sqlite3.current
