feat: Add student coding environment with timer and hints
- Implement timer system with pause/resume
- Add hints display for questions
- Track time spent on submissions
- Update database models for timer tracking
- Add security: exclude credentials from git

--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,13 @@ backend/db_dump_clean.json
 backend/db_dump_final.json
 backend/*.backup
 backend/db.sqlite3.current
+
+# Sensitive credentials and user data
+CREDENTIALS.md
+backend/list_all_users.py
+backend/add_hints_to_questions.py
+
+# Database files (contains user data)
+backend/db.sqlite3
+*.sqlite3
+db.sqlite3.backup
