--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,3 +5,5 @@ djangorestframework-simplejwt==5.3.0
 python-decouple==3.8
 Pillow==10.1.0
 psycopg2-binary==2.9.9
+django-anymail==14.0
+docker==7.0.0
