--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,3 +7,6 @@ Pillow==10.1.0
 psycopg2-binary==2.9.9
 django-anymail==14.0
 docker==7.0.0
+django-redis==5.4.0
+boto3==1.34.0
+django-storages==1.14.2
