--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,4 +1,4 @@
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_b3Blbi15ZXRpLTE5LmNsZXJrLmFjY291bnRzLmRldiQ
 
 # API Configuration
-VITE_API_BASE_URL=/api
+VITE_API_BASE_URL=http://localhost:8000/api
