--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,8 @@ djangorestframework==3.14.0
 django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.0
 python-decouple==3.8
-Pillow==10.1.0
-psycopg2-binary==2.9.9
+Pillow>=10.3.0
+psycopg2-binary>=2.9.9
 django-anymail==14.0
 docker==7.0.0
 django-redis==5.4.0
